# TSApplication

./: .pdm-python  README.md  Sticker_Forecast_Exercise  TSAPPLICATION.ipynb  pyproject.toml
Bayesian Application/: BAYESIAN_APPLY.ipynb
Bayesian Practice (TSA)/: Electric_Production.csv
Kaggle Sticker Forecast/: Sticker_Forecast_Exercise.ipynb
M5 Forecasting - Uncertainty/: M5_EDA.ipynb
Statistical Rethinking/: .RData  .Rhistory  CODE_EXERCISES.ipynb  EXERCISES.ipynb  Exercises.R
data/: Age_Distribution_Of_Cars.csv  Cause_Of_Accidents_By_Severity.csv  Motor_Vehicle_Population_By_Type.csv  Road_Traffic_Accident_Casualties.csv  Vehicles_Involved_In_Road_Traffic_Accidents_By_Type.csv
