[project]
name = "TSApplication"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Caleb Mah",email = "calebmahweekeat@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "orbit-ml>=1.1.4.9",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
